--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "@types/styletron-react": "^5.0.2",
     "@types/styletron-standard": "^2.0.0",
     "baseui": "^9.67.1",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-prettier": "^3.1.2",
+    "gh-pages": "^2.2.0",
+    "prettier": "^2.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router": "^5.1.2",
@@ -21,6 +25,7 @@
     "sass-node": "^4.11.2",
     "styletron-engine-atomic": "^1.4.6",
     "styletron-react": "^5.2.7",
+    "three": "^0.115.0",
     "typescript": "~3.7.2"
   },
   "scripts": {
