--- a/.eslintrc
+++ b/.eslintrc
@@ -19,6 +19,7 @@
     "@typescript-eslint/no-explicit-any": 0,
     "@typescript-eslint/triple-slash-reference": 0,
     "react/prop-types": 0,
+    "react/no-children-prop": 0,
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
     "@typescript-eslint/camelcase": 0
