--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "shader-playground",
   "version": "0.1.0",
+  "homepage": "https://hongbinli.com/shader-playground/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -33,6 +34,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -m 'build: update build' -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
